# CMake

CMake01/: CMakeLists.txt
CMake01/src/: hello.cpp
CMake01/sub/: CMakeLists.txt
CMake02/: CMakeLists.txt  main.cpp
CMake02/src/: CMakeLists.txt  hello.cpp
cmake/: CMakeLists.txt
cmake/hello-exe/: CMakeLists.txt  main.cpp
cmake/say-hello/: CMakeLists.txt
cmake/say-hello/src/say-hello/: hello.cpp  hello.hpp
cmake2/: CMakeLists.txt
cmake3/: CMakeLists.txt
dcmake/: Makefile  app.out  kor.c  main.c  usa.c
